[project]
name = "toolkit-collection"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nullqwertyuiop", email = "null@member.fsf.org"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
test = [
    "ntoolkit-test @ file:///${PROJECT_ROOT}/ntoolkit/test",
]

[tool.pdm]
distribution = false
