[project]
name = "ntoolkit-chat"
version = "0.1.0"
description = "ntoolkit-chat"
authors = [
    {name = "nullqwertyuiop", email = "null@member.fsf.org"},
]
dependencies = [
    "aiohttp>=3.10.2",
    "pydantic>=2.9.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
